# DesktopPetForLinux

./: .gitattributes  .gitignore  README.md  dancer.py  main.py  pyproject.toml  requirements.txt
app/: main.py  runtime_paths.py
app/matting/: __init__.py  base.py  legacy_rvm_torch.py  model_paths.py  registry.py  windows_onnx_common.py  windows_rvm_onnx.py  windows_u2net_onnx.py
app/ui/: add_wife_wizard.py
models/u2net/: u2net_human_seg.onnx
src/: rvm_matting.py
tools/: build-windows.ps1  fetch-models.cmd  fetch-models.ps1
